# cpp-project-template-2.0

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
libs/calculator/: CMakeLists.txt
libs/calculator/src/: sum.cpp
libs/calculator/src/include/calculator/: sum.h
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
tests/include/mocks/: MockIPerson.h
tests/src/: greeterTests.cpp  personTests.cpp
